#3 fixed spacing inside overflow scroll

--- a/css/default.css
+++ b/css/default.css
@@ -87,12 +87,24 @@ h1.cover-header {
 
 a.navtab-white {
   color: #fff;
-  padding: 0 10px;
+  margin: 0 10px;
+}
+
+a.navtab-white:hover {
+  text-decoration: none;
+  border-bottom: 2px solid #fff;
+  padding-bottom: 10px;
 }
 
 a.navtab-black {
   color: #000;
-  padding: 0 10px;
+  margin: 0 10px;
+}
+
+a.navtab-black:hover {
+  text-decoration: none;
+  border-bottom: 2px solid #000;
+  padding-bottom: 10px;
 }
 
 .about-content {
@@ -114,7 +126,8 @@ a.navtab-black {
 
 .projects-content {
   height: 100vh;
-  overflow-y: scroll;
+  padding: 0;
+  overflow-y: auto;
 }
 
 .project-one,
@@ -122,7 +135,6 @@ a.navtab-black {
 .project-three {
   height: 100%;
   width: 100%;
-  margin: 0;
 }
 
 .project-one {
